--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Send Taiwan stock's K value and 0050 price to my email",
   "main": "index.js",
   "scripts": {
+    "build": "babel src -d lib",
     "test": "test"
   },
   "keywords": [
