--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node lib/index.js",
     "build": "babel src -d lib",
-    "watch:build": "babel --watch src -d lib",
-    "test": "test"
+    "watch:build": "babel --watch src -d lib"
   },
   "keywords": [
     "Taiwan",
