--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node lib/index.js",
     "build": "babel src -d lib",
-    "watch:build": "babel --watch src -d lib"
+    "watch:build": "babel --watch src -d lib",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "Taiwan",
