--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node lib/index.js",
     "build": "babel src -d lib",
+    "dev": "nodemon --exec \"npm run build && npm start\" --watch src",
     "watch:build": "babel --watch src -d lib",
     "postinstall": "npm run build"
   },
