--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Send Taiwan stock's K value and 0050 price to my email",
   "main": "index.js",
   "scripts": {
-    "start": "node lib/index.js",
+    "report": "node lib/index.js",
     "build": "babel src -d lib",
-    "dev": "nodemon --exec \"npm run build && npm start\" --watch src",
+    "dev": "nodemon --exec \"npm run build && npm run report\" --watch src",
     "postinstall": "npm run build"
   },
   "keywords": [
